--- a/samples/web/index.html
+++ b/samples/web/index.html
@@ -7,13 +7,30 @@
     <script src="/dist/connect-web/index.js"></script>
 
     <script>
-        function createUrl() {
-            fetch('/create-session', {
+        function enableButtons() {
+            const elements = document.getElementsByClassName('launch-button');
+            for (let i = 0; i < elements.length; i++) {
+                elements[i].disabled = false;
+            }
+        }
+
+        function disableButtons(){
+            const elements = document.getElementsByClassName('launch-button');
+            for (let i = 0; i < elements.length; i++) {
+                elements[i].disabled = true;
+            }
+        }
+
+        async function createUrl() {
+            disableButtons();
+            const launchUrl = await fetch('/create-session', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
                 }
-            }).then(response => response.json()).then(r => window.launchUrl = r.launchUrl);
+            }).then(response => response.json()).then(r => r.launchUrl);
+            window.launchUrl = launchUrl;
+            enableButtons();
         }
         function exchangeResult(response) {
             console.log(response);
@@ -24,6 +41,8 @@
                 },
                 body: JSON.stringify({sessionId: response.sessionId, resultsAccessKey: response.resultsAccessKey})
             }).then(response => response.json()).then(r => document.getElementById('results').innerText = JSON.stringify(r, null, 2));
+            //prepare for a next launch
+            createUrl();
         }
         createUrl();
     </script>
@@ -32,7 +51,13 @@
     <h1>Hi! Start a verification by clicking the buttons below. Make sure you're running one of the backend samples.</h1>
     <ul>
         <li>
-            <button onclick="new Trinsic.ConnectClient().launchIframe(window.launchUrl).then(r => exchangeResult(r))">Launch an iFrame</button>
+            <button class="launch-button" disabled="true" onclick="Trinsic.launchIframe(window.launchUrl).then(r => exchangeResult(r))">Launch an iFrame</button>
+        </li>
+        <li>
+            <button class="launch-button" disabled="true" onclick="Trinsic.launchRedirect(window.launchUrl, window.location.origin + '/redirect')">Launch redirect flow</button>
+        </li>
+        <li>
+            <button class="launch-button" disabled="true" onclick="Trinsic.launchPopup(window.launchUrl).then(r => exchangeResult(r))">Launch popup</button>
         </li>
     </ul>    
     <pre id="results">
