--- a/samples/web/index.html
+++ b/samples/web/index.html
@@ -4,6 +4,65 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connect samples</title>
+    <style>
+        button {
+            all: unset;
+            display: inline-block;
+            cursor: pointer;
+        }
+        ul {
+            width: 320px;
+            list-style: none;
+        }
+        ul#listOptions {
+            width: 960px;
+            column-count: 3; /* Adjust this number to set the number of columns */
+            column-gap: 20px; /* Adjust the gap between columns */
+            padding: 20px;
+        }
+        ul li {
+            border-bottom: 1px solid #F3F4F6; /* Adds a bottom border to each li item */
+        }
+
+        ul li:last-child {
+            border-bottom: none; /* Removes the border from the last li item */
+        }
+
+        ul li button {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: left;
+        }
+        ul li button img {
+            padding: 0.5rem;
+            width: 1.5rem;
+            height: 1.5rem;
+            display: inline;
+
+        }
+
+        ul li button .launch-name {
+            color: #262d35;
+            vertical-align: middle;
+            flex-grow: 1;
+
+        }
+
+        .chevron {
+            display: inline-block;
+            width: 10px;
+            height: 10px;
+            border-right: 2px solid #262d35;
+            border-bottom: 2px solid #262d35;
+            transform: rotate(315deg);
+            margin: 10px; /* Optional: Adjust margin as needed */
+        }
+
+        .friendly-text {
+            color: #262d35;
+        }
+    </style>
 
     <script>
         function enableButtons() {
@@ -32,7 +91,7 @@
             enableButtons();
         }
         function exchangeResult(response) {
-            console.log(response);
+            console.debug("Exchanging result, response:", response)
             fetch('/exchange-result', {
                 method: 'POST',
                 headers: {
@@ -43,21 +102,43 @@
             //prepare for a next launch
             createUrl();
         }
+        function getProviders() {
+            fetch('/providers', {
+                method: 'GET',
+                headers: {
+                    'Content-Type': 'application/json'
+                }
+            }).then(response => response.json()).then(r => {
+                for(let i=0;i<r.providers.length;i++) {
+                    document.getElementById('listOptions').innerHTML += `<li><button class="launch-button" style="padding: 10px; background-color: transparent;" onclick="launchPopupMethod('${r.providers[i].id}').then(r => exchangeResult(r))"> <img src="${r.providers[i].logoUrl}" /> <div class="launch-name"> Launch ${r.providers[i].name}</div>  <div class="chevron"></div></button></li>`;
+                }
+            });
+        }
+        async function launchPopupMethod(provider) {
+            return launchPopup(`launch/${provider}?redirectUrl=${window.location.origin}/redirect`);
+        }
         createUrl();
+        getProviders();
     </script>
 </head>
-<body style="background-color: gray 50%">
-    <h1>Hi! Start a verification by clicking the buttons below. Make sure you're running one of the backend samples.</h1>
+<body class="friendly-text">
+    <h1>Trinsic Connect Frontend Client Sample </h1>
+    
+    <p>You can launch the Trinsic Connect Widget through 3 different modes, an embedded iFrame, a popup or a redirect flow.</p>
     <ul>
         <li>
-            <button class="launch-button" disabled="true" onclick="launchIframe(window.launchUrl).then(r => exchangeResult(r))">Launch an iFrame</button>
+            <button class="launch-button" disabled="true" onclick="launchIframe(window.launchUrl).then(r => exchangeResult(r))"><img src="https://cdn.trinsic.id/assets/logo/192x192.png"/><div class="launch-name">Launch an iFrame</div><div class="chevron"></div></button>
         </li>
         <li>
-            <button class="launch-button" disabled="true" onclick="launchRedirect(window.launchUrl, window.location.origin + '/redirect')">Launch redirect flow</button>
+            <button class="launch-button" disabled="true" onclick="launchPopup(window.launchUrl).then(r => exchangeResult(r))"><img src="https://cdn.trinsic.id/assets/logo/192x192.png"/><div class="launch-name">Launch popup</div><div class="chevron"></div></button>
         </li>
         <li>
-            <button class="launch-button" disabled="true" onclick="launchPopup(window.launchUrl).then(r => exchangeResult(r))">Launch popup</button>
+            <button class="launch-button" disabled="true" onclick="launchRedirect(window.launchUrl, window.location.origin + '/redirect')"><img src="https://cdn.trinsic.id/assets/logo/192x192.png"/><div class="launch-name">Launch redirect flow</div><div class="chevron"></div></button>
         </li>
+    </ul>
+    <p>Provider specific methods - this shows how to embed individual methods directly into your website instead of using the full Trinsic Connect Widget. You can easily add only a couple of the methods you want to support right next to your existing identity verification provider.</p>
+    <ul id="listOptions">
+        
     </ul>    
     <pre id="results">
 
@@ -71,6 +152,7 @@
         window.launchIframe = launchIframe;
         window.launchRedirect = launchRedirect;
         window.launchPopup = launchPopup;
+
     </script>
 </body>
 </html>
