--- a/ui-web/samples/index.html
+++ b/ui-web/samples/index.html
@@ -146,7 +146,7 @@
 
     <script type="module">
         // Import the function from your module
-        import { launchIframe, launchRedirect, launchPopup } from '/dist/web-ui/index.js';
+        import { launchIframe, launchRedirect, launchPopup } from '/dist/ui-web/index.js';
 
         // Assign the function to the global scope
         window.launchIframe = launchIframe;
