--- a/ui-web/samples/redirect.html
+++ b/ui-web/samples/redirect.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,6 +11,7 @@
       const data = {
         success: params.get("success") === "true" ? true : false,
         resultsAccessKey: params.get("resultsAccessKey"),
+        sessionId: params.get("sessionId"),
       };
 
       console.debug("Sending message to opener", data, window.opener);
