--- a/ui-web/samples/redirect.html
+++ b/ui-web/samples/redirect.html
@@ -6,6 +6,7 @@
     <title>Trinsic redirect</title>
   </head>
   <body>
+    <script type="module" src="./main.js"></script>
     <script type="module">
       const params = new URLSearchParams(window.location.search);
       const data = {
@@ -16,11 +17,16 @@
 
       console.debug("Sending message to opener", data, window.opener);
 
-      window.opener?.postMessage(data, "*");
+      if (window.opener) {
+        window.opener?.postMessage(data, "*");
+      } else {
+        exchangeResult(data);
+      }
     </script>
     <noscript>
       <p>This page requires JavaScript to work properly.</p>
     </noscript>
     <div>Completing the flow</div>
+    <pre id="results"></pre>
   </body>
 </html>
