--- a/ui-web/samples/redirect.html
+++ b/ui-web/samples/redirect.html
@@ -6,7 +6,7 @@
     <title>Trinsic redirect</title>
   </head>
   <body>
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./shared.js"></script>
     <script type="module">
       const params = new URLSearchParams(window.location.search);
       const data = {
