Add recommendation results

--- a/ui-web/samples/hosted.html
+++ b/ui-web/samples/hosted.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./style.css" />
   <link rel="icon" href="https://cdn.trinsic.id/assets/logo/favicon.ico" />
   <script type="module" src="./shared.js"></script>
-  <script type="module" src="./simple.js"></script>
+  <script type="module" src="./hosted.js"></script>
   <title>Trinsic UI sample</title>
 </head>
 
@@ -31,7 +31,12 @@
       </label>
     </p>
     
-    <ul id="hostedProviderOptions" class="listOptions"></ul>  
+    <h4>Recognized providers</h4>
+    <ul id="recognizedProviders" class="listOptions"></ul>  
+    <h4>Relevant providers</h4>
+    <ul id="relevantProviders" class="listOptions"></ul>  
+    <h4>Remainding providers</h4>
+    <ul id="remainderProviders" class="listOptions"></ul>  
   </div>
 
   <div class="modal micromodal-slide" id="results-modal" aria-hidden="true">
