--- a/ui-web/samples/index.html
+++ b/ui-web/samples/index.html
@@ -16,7 +16,7 @@
 
     <ul>
       <li><a href="/widget">Widget</a></li>
-      <li><a href="/simple">Hosted Provider Session</a></li>
+      <li><a href="/hosted">Hosted Provider Session</a></li>
       <li><a href="/advanced">Advanced Provider Session</a></li>
     </ul>
 </body>
