Add python hosted

--- a/ui-web/samples/advanced.html
+++ b/ui-web/samples/advanced.html
@@ -65,7 +65,7 @@
     <ul id="recognizedProviders" class="listOptions"></ul>
     <h4>Relevant providers</h4>
     <ul id="relevantProviders" class="listOptions"></ul>
-    <h4>Remainding providers</h4>
+    <h4>Remaining providers</h4>
     <ul id="remainderProviders" class="listOptions"></ul>
   </div>
 
