--- a/ui-web/samples/hosted.html
+++ b/ui-web/samples/hosted.html
@@ -35,7 +35,7 @@
     <ul id="recognizedProviders" class="listOptions"></ul>  
     <h4>Relevant providers</h4>
     <ul id="relevantProviders" class="listOptions"></ul>  
-    <h4>Remainding providers</h4>
+    <h4>Remaining providers</h4>
     <ul id="remainderProviders" class="listOptions"></ul>  
   </div>
 
