Web sample support for `ShowContent`

--- a/ui-web/samples/advanced.html
+++ b/ui-web/samples/advanced.html
@@ -44,6 +44,10 @@
         DeeplinkToMobile
       </label>
       <label>
+        <input type="checkbox" name="TrinsicCapabilities" value="ShowContent" checked="true">
+        ShowContent
+      </label>
+      <label>
         <input type="checkbox" name="TrinsicCapabilities" value="RefreshStepContent" checked="true">
         RefreshStepContent
       </label>
@@ -56,7 +60,7 @@
         PollResult
       </label>
       <p style="margin-left: 20px; margin-top: 0px;"><small>Signal to our API what capabilities your frontend supports.
-          <br /> Our sample frontend supports all capabilities but you can disable them so that you can test the API
+          <br /> Our sample frontend supports all capabilities, but you can disable them to test the API
           surface.</small></p>
     </div>
 
