--- a/ui-web/samples/advanced-popup.html
+++ b/ui-web/samples/advanced-popup.html
@@ -31,7 +31,10 @@
             <b>Done:</b> <code id="done"></code> <br/>
             <b>Error code:</b> <code id="error-code"></code> <br/>
             
-            <canvas id="qrcode-canvas" style="max-width: 400px;max-height:400px;"></canvas>
+            <canvas id="qrcode-canvas" style="max-width: 400px;max-height:400px;display:none;"></canvas>
+            <div id="show-content" style="font-size: 4em; font-weight: bold; width: 100%; height: auto; text-align: center;display:none;">
+
+            </div>
           </p>
         </main>
         <footer class="modal__footer">
