--- a/ui-web/samples/redirect.html
+++ b/ui-web/samples/redirect.html
@@ -27,6 +27,7 @@
       <p>This page requires JavaScript to work properly.</p>
     </noscript>
     <div>Completing the flow</div>
+    <a href="/"> &lt;-- Back</a>
     <pre id="results"></pre>
   </body>
 </html>
