Update sample SDK version

--- a/ui-web/samples/advanced.html
+++ b/ui-web/samples/advanced.html
@@ -59,6 +59,10 @@
         <input type="checkbox" name="TrinsicCapabilities" value="PollResult" checked="true">
         PollResult
       </label>
+      <label>
+        <input type="checkbox" name="TrinsicCapabilities" value="PollAfterRedirect" checked="true">
+        PollAfterRedirect
+      </label>
       <p style="margin-left: 20px; margin-top: 0px;"><small>Signal to our API what capabilities your frontend supports.
           <br /> Our sample frontend supports all capabilities, but you can disable them to test the API
           surface.</small></p>
