--- a/ui-web/samples/redirect.html
+++ b/ui-web/samples/redirect.html
@@ -1,18 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trinsic redirect</title>
-  </head>
-  <body>
-    <script type="module" src="./shared.js"></script>
-    <script type="module">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Trinsic redirect</title>
+</head>
+
+<body>
+  <script type="module" src="./shared.js"></script>
+  <script type="module">
+    (() => {
+      // Parse out the query parameters from the URL
       const params = new URLSearchParams(window.location.search);
+      const postRedirectAction = params.get("postRedirectAction");
+      const resultsAccessKey = params.get("resultsAccessKey");
+      const sessionId = params.get("sessionId");
+      const success = params.get("success") === "true";
+
+      // If postRedirectAction is "poll", the results of the Session are not immediately available, so we need to poll for them
+      // (related to `PollAfterRedirect` capability)
+      if (postRedirectAction === "poll") {
+        const pollUrl = window.location.origin + "/advanced-poll-after-redirect?sessionId=" + sessionId + "&resultsAccessKey=" + resultsAccessKey;
+        window.location.href = pollUrl;
+        return;
+      }
+
+      // Otherwise, results are immediately available to fetch from Trinsic's API, so we should proceed.
+      // Produce a message to send to the page which opened this window
       const data = {
-        success: params.get("success") === "true" ? true : false,
-        resultsAccessKey: params.get("resultsAccessKey"),
-        sessionId: params.get("sessionId"),
+        success: success,
+        resultsAccessKey: resultsAccessKey,
+        sessionId: sessionId,
+        isTrinsicSamplePopupMessage: true,
       };
 
       console.debug("Sending message to opener", data, window.opener);
@@ -22,12 +42,14 @@
       } else {
         exchangeResult(data);
       }
-    </script>
-    <noscript>
-      <p>This page requires JavaScript to work properly.</p>
-    </noscript>
-    <div>Completing the flow</div>
-    <a href="/"> &lt;-- Back</a>
-    <pre id="results"></pre>
-  </body>
+    })();
+  </script>
+  <noscript>
+    <p>This page requires JavaScript to work properly.</p>
+  </noscript>
+  <div>Completing the flow</div>
+  <a href="/"> &lt;-- Back</a>
+  <pre id="results"></pre>
+</body>
+
 </html>
