Work on mDL sample

--- a/ui-web/samples/index.html
+++ b/ui-web/samples/index.html
@@ -18,6 +18,7 @@
       <li><a href="/widget">Widget</a></li>
       <li><a href="/hosted">Hosted Provider Session</a></li>
       <li><a href="/advanced">Advanced Provider Session</a></li>
+      <li><a href="/mdl">(Alpha) mDL Exchange</a></li>
     </ul>
 </body>
 
