--- a/ui-web/samples/mdl.html
+++ b/ui-web/samples/mdl.html
@@ -13,15 +13,13 @@
 
 <body class="friendly-text">
   <h1>Trinsic Frontend Client Sample</h1>
-  <p><a href="https://docs.trinsic.id/docs/integration-guide">Read more</a> in our integration guide about the different
-    session launch modes.</p>
   <a href="/"> &lt;-- Back</a>
   <div style="border: 1px solid black;padding: 5px; margin: 5px;">
     <h3>mDL Exchange (Digital Credentials API)</h3>
 
     <p>
       <b>VerificationProfile / App ID:</b>
-      <input type="text" name="verificationProfileId" value="4d9beada-c60b-4585-8214-9441edcf9e52">
+      <input type="text" name="verificationProfileId" value="">
     </p>
 
     <p>
@@ -48,9 +46,6 @@
       </label>
     </p>
 
-    <!-- 
-    given_name family_name birth_date issue_date expiry_date issuing_country issuing_authority document_number portrait sex nationality
-    -->
     <p>
       <b>Fields:</b>
       <label>
