--- a/ui-web/samples/index.html
+++ b/ui-web/samples/index.html
@@ -17,7 +17,7 @@
     <ul>
       <li><a href="/widget">Widget</a></li>
       <li><a href="/hosted">Hosted Provider Session</a></li>
-      <li><a href="/advanced">Advanced Provider Session</a></li>
+      <li><a href="/direct">Direct Provider Session</a></li>
       <li><a href="/mdl">(Alpha) mDL Exchange</a></li>
     </ul>
 </body>
