--- a/ui-web/samples/direct.html
+++ b/ui-web/samples/direct.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./style.css" />
   <link rel="icon" href="https://cdn.trinsic.id/assets/logo/favicon.ico" />
   <script type="module" src="./shared.js"></script>
-  <script type="module" src="./advanced.js"></script>
+  <script type="module" src="./direct.js"></script>
   <title>Trinsic UI sample</title>
 </head>
 
@@ -20,7 +20,7 @@
 
 
   <div style="border: 1px solid black;padding: 5px; margin: 5px;">
-    <h3>Advanced Provider Session</h3>
+    <h3>Direct Provider Session</h3>
     <p>
       <b>Fallback to Trinsic Hosted UI:</b>
       <label>
@@ -78,18 +78,18 @@
   </div>
 
 
-  <div class="modal micromodal-slide" id="advanced-modal" aria-hidden="true">
+  <div class="modal micromodal-slide" id="direct-modal" aria-hidden="true">
     <div class="modal__overlay" tabindex="-1" data-micromodal-close>
       <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
         <header class="modal__header">
           <h2 class="modal__title" id="modal-1-title">
-            Advanced Provider Session
+            Direct Provider Session
           </h2>
           <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
         </header>
         <main class="modal__content" id="modal-1-content">
           <p>
-            We've launched an advanced provider session. We'll update this modal with the status of the session. <br />
+            We've launched an direct provider session. We'll update this modal with the status of the session. <br />
             <b>Session ID:</b> <code id="session-id"></code> <br />
             <b>Next step:</b> <code id="next-step"></code> <br />
             <b>Result collection:</b> <code id="result-collection"></code> <br />
