--- a/ui-web/samples/index.html
+++ b/ui-web/samples/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./style.css" />
-  <link rel="icon" href="https://cdn.trinsic.id/assets/logo/favicon.ico" />
+  <link rel="icon" href="https://content.trinsic.id/assets/logo/favicon.ico" />
   <title>Trinsic UI sample</title>
 </head>
 
