--- a/ui-web/samples/widget.html
+++ b/ui-web/samples/widget.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./style.css" />
-  <link rel="icon" href="https://cdn.trinsic.id/assets/logo/favicon.ico" />
+  <link rel="icon" href="https://content.trinsic.id/assets/logo/favicon.ico" />
   <script type="module" src="./shared.js"></script>
   <script type="module" src="./widget.js"></script>
   <title>Trinsic UI sample</title>
@@ -34,7 +34,7 @@
     </p>
     <ul class="listOptions">
       <li><button class="launch-widget" onclick="launchWidget()">
-        <img src="https://cdn.trinsic.id/assets/logo/192x192.png" />
+        <img src="https://content.trinsic.id/assets/logo/192x192.png" />
 
         <div class="launch-name">Start widget verification</div>
         <div class="chevron"></div>
